--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@
   /*кнопка желтая*/
   --basin-gold2: #EAB534;
   --basin-gold3: #E5A722;
+  --basic-blu: #1164B4;
 }
 
 .visually-hidden {
@@ -101,6 +102,11 @@ img {
   opacity: 0.3;
 }
 
+.main-header-logo:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
+}
+
 .site-navigation,
 .nav-basket {
   display: flex;
@@ -114,6 +120,10 @@ img {
   padding: 0;
 }
 
+.site-navigation-catalog {
+  padding-top: 13px;
+}
+
 .nav-item a,
 .nav-basket {
   color: var(--basic-black);
@@ -124,6 +134,8 @@ img {
 
 .nav-active-catalog {
   position: relative;
+  display: block;
+  margin-bottom: 13px;
 }
 
 .nav-active-catalog::after {
@@ -170,6 +182,12 @@ img {
 .nav-basket:active {
   color: var(--basic-grey3);
   text-decoration: none;
+}
+
+.nav-item a:focus,
+.nav-basket:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
 }
 
 /*на стронице каталога*/
@@ -285,6 +303,12 @@ img {
   box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
 }
 
+.slider-button:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
+  border-radius: 3px;
+}
+
 .slider-item-wrapper-two .text-slider {
   margin-top: 34px;
   margin-bottom: 29px;
@@ -323,6 +347,11 @@ img {
   height: 8px;
   box-sizing: border-box;
   border: 2px solid var(--basic-grey15);
+  border-radius: 50%;
+}
+
+.swich-one:focus:checked + .slider-toogle-label::before {
+  box-shadow: 0 0 0 4px var(--basic-blu);
   border-radius: 50%;
 }
 
@@ -435,6 +464,14 @@ img {
   color: rgba(255, 255, 255, 0.3);
   box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
   background-color: var(--basin-gold3);
+}
+
+.button-green:focus,
+.button-red:focus,
+.button-yellow:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
+  border-radius: 3px;
 }
 
 /*Особенности*/
@@ -631,6 +668,12 @@ img {
   opacity: 0.1;
 }
 
+.logo-link:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
+  opacity: 0.5;
+}
+
 .partners::before {
   content: "";
   height: 2px;
@@ -716,6 +759,12 @@ img {
   margin-top: 19px;
 }
 
+.contacts-address a:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
+  border-radius: 3px;
+}
+
 .contacts-button {
   display: inline-block;
   vertical-align: top;
@@ -741,6 +790,11 @@ img {
   background-color: var(--basic-red3);
   color: rgba(255, 255, 255, 0.3);
   box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+}
+
+.contacts-button:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
 }
 
 .map {
@@ -800,8 +854,7 @@ img {
   margin: auto;
 }
 
-.social-button:hover,
-.social-button:focus {
+.social-button:hover {
   background-color: var(--basic-red2);
 }
 
@@ -809,6 +862,13 @@ img {
   background-color: var(--basic-red3);
   color: rgba(255, 255, 255, 0.3);
   box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+}
+
+.social-button:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
+  border-radius: 50%;
+
 }
 
 .social-button:active svg {
@@ -952,6 +1012,13 @@ s .form-email:hover,
   color: var(--basic-red2);
 }
 
+.feedback-name:focus,
+.feedback-email:focus,
+.feedback-text {
+  outline: none;
+  box-shadow: 0 0 0 2px var(--basic-black);
+}
+
 .feedback-button {
   font-weight: 500;
   font-size: 16px;
@@ -976,6 +1043,11 @@ s .form-email:hover,
   box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
 }
 
+.feedback-button:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
+}
+
 .feedback-close {
   position: absolute;
   width: 21px;
@@ -987,8 +1059,6 @@ s .form-email:hover,
   border: 0;
   cursor: pointer;
   opacity: 0.3;
-  background: var(--basic-white);
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .feedback-close::after,
@@ -1021,6 +1091,12 @@ s .form-email:hover,
   border: 0 none;
   background: none;
   box-shadow: none;
+}
+
+.feedback-close:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
+  border-radius: 3px;
 }
 
 /*Catalog*/
@@ -1127,6 +1203,8 @@ s .form-email:hover,
 
 .slider-catalog-button:focus {
   outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
+  border-radius: 3px;
 }
 
 .filter-sort-title {
@@ -1168,9 +1246,19 @@ s .form-email:hover,
   opacity: 1;
 }
 
+.filter-sort-item a:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
+}
+
 .filter-dir-item {
   list-style-type: none;
   padding-left: 18px;
+}
+
+.filter-dir-item a:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
 }
 
 /* Каталог */
@@ -1232,18 +1320,26 @@ s .form-email:hover,
 .example-item-info {
   display: none;
   position: absolute;
+  justify-content: center;
   bottom: 0;
   flex-wrap: wrap;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  max-height: 100%;
   background-color: var(--basic-grey1);
   align-items: center;
+  padding-top: 26px;
+  padding-bottom: 51px;
 }
 
 .example-item:hover .example-item-info {
   display: flex;
   box-shadow: 0 4px 4px var(--basic-grey13);
+}
+
+.example-item:hover:focus-within,
+.example-item-info:focus {
+  box-shadow: 0 0 0 4px var(--basic-blu);
 }
 
 .example-item h3 {
@@ -1254,7 +1350,6 @@ s .form-email:hover,
   text-transform: uppercase;
   color: var(--basic-black);
   margin: 0;
-  margin-top: 26px;
   margin-bottom: 12px;
 }
 
@@ -1269,7 +1364,7 @@ s .form-email:hover,
 
 .example-text {
   min-height: 37px;
-  max-height: 100%;
+  max-height: 360px;
   text-overflow: ellipsis;
   margin: 0;
   padding: 0;
@@ -1305,6 +1400,12 @@ s .form-email:hover,
 .button-price:active {
   background-color: var(--basic-red3);
   box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+}
+
+.button-price:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
+  border-radius: 3px;
 }
 
 /*pagination*/
@@ -1359,6 +1460,12 @@ s .form-email:hover,
   border-radius: 3px;
   padding: 11px 17px 11px 19px;
   margin-right: 11px;
+}
+
+.pagination-page-item a:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
+  border-radius: 3px;
 }
 
 .pagination-page-item-last a {
@@ -1427,6 +1534,12 @@ s .form-email:hover,
   left: 160px;
 }
 
+.range-controls .toggle-min:focus,
+.range-controls .toggle-max:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
+}
+
 .price-controls {
   display: flex;
   justify-content: space-between;
@@ -1441,6 +1554,12 @@ s .form-email:hover,
   border: none;
   border-radius: 5px;
   background: var(--basic-grey1);
+}
+
+.price-controls input:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
+  border-radius: 5px;
 }
 
 .filter-view {
@@ -1574,6 +1693,17 @@ s .form-email:hover,
   opacity: 0.1;
   cursor: default;
   pointer-events: none;
+}
+
+.filter-input-radio:focus + label::before {
+  box-shadow: 0 0 0 4px var(--basic-blu);
+}
+
+.filter-input-checkbox:focus + label::before,
+.filter-input-checkbox:checked:focus + label::after {
+  outline: none;
+  box-shadow: 0 0 0 4px var(--basic-blu);
+  border-radius: 3px;
 }
 
 /*catalog*/
